--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,12 +2,10 @@
 layout: default
 ---
 <h1>{{ page.title }} </h1>
-<p>{{ page.date | date_to_string }} - {{ page.author }}</p>
+<p>{{ page.date | date_to_string }} - Andre Gomes</p>
 
-{% assign filtered_project = site.projects | where: 'project', page.project %}
-{{ filtered_project | inspect }}
-{{ page | inspect }}
-<p>Project: <a href="{{ filtered_project.url }}">{{ page.project }}</a></p>
-
+{% assign project = site.projects | where: 'name', page.project | first %}
+{% if project %}
+  <p>@<a href="{{ project.url }}">{{ project.name }}</a></p>
+{% endif %}
 {{ content }}
-
