--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,13 +3,49 @@ font-family: "Metropolis Regular";
 src: url("../fonts/Metropolis-Regular.ttf");
 }
 
-html {
-  font-family: "Metropolis Regular"
+html, body {
+  width: 100%;
+  font-family: "Metropolis Regular";
+
 }
 
+h1 {
+
+}
+
+h2 {
+
+}
+
+h3 {
+
+}
+
+h4 {
+
+}
+
+h5 {
+
+}
+
+p {
+
+}
+
+a {
+  color: blue;
+  text-decoration: none;
+  &:hover {
+    color: purple;
+  }
+  &:visited {
+  }
+}
 
 .current {
-  color: green;
+  font-style: italic;
+  text-decoration: underline;
 }
 
 .readBook {
