--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ layout: default
 <h1>{{ page.title }} </h1>
 <p>{{ page.date | date_to_string }} - Andre Gomes</p>
 
-{% assign project = site.projects | where: 'name', page.project | first %}
-{% if project %}
-  <p>@<a href="{{ project.url }}">{{ project.name }}</a></p>
+{% assign post = site.posts | where: 'name', page.post | first %}
+{% if post %}
+  <p>@<a href="{{ post.url }}">{{ post.name }}</a></p>
 {% endif %}
 {{ content }}
