--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,5 @@
   		{{ item.name }}
   	</a> |
   {% endfor %}
-  <a href="/feed.xml">RSS</a>
+  <a href="/feed.xml" target="_blank" rel="noopener noreferrer">RSS</a>
 </nav>
