--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-Forwarning, we did not get selected so this is not an article on how to get selected for MIT Solve Challenges. Solving problems are more than the end but aslo the action of doing it.
+  {% assign quote = site.data.quotes | first %}
 </footer>
