--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,5 +4,6 @@
   		{{ item.name }}
   	</a> |
   {% endfor %}
+  <a href="http://cocoon.build" target="_blank" rel="noopener noreferrer">Cocoon</a> |
   <a href="/feed.xml" target="_blank" rel="noopener noreferrer">RSS</a>
 </nav>
