--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,17 @@ html, body {
   -webkit-align-items: center;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  line-height: 1.25;
+}
+
+body, h1, h2, h3, h4, h5, h6 {
+  font-size-adjust: 0.5;
+}
+
 nav {
   padding-top: 10px;
 }
