--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,8 +16,10 @@ html, body {
 }
 
 body {
+  width: 100%;
+  max-width: 800px;
   margin: 0;
-  padding: 0;
+  padding: 20px;
   line-height: 1.25;
 }
 
@@ -32,7 +34,7 @@ footer {
 }
 
 main {
-  width:  100%;
+  width: 100%;
   padding-top: 30px;
 }
 
