--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
   <body>
     {% include navigation.html %}
     <main>
-    {{ content }}
+      {{ content }}
     </main>
+    {% include footer.html %}
   </body>
 </html>
