--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,6 +6,7 @@ layout: default
 
 {{ content }}
 
+{% if site.posts > 0 %}
 <h2>Posts</h2>
 <ul>
   {% assign filtered_posts = site.posts | where: 'project', page.name %}
@@ -13,3 +14,4 @@ layout: default
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
+{% endif %}
