--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,7 +18,7 @@ $aqua: #689d6a; // author
 $yellow: #d79921;
 
 // Code Blocks, Hints, Labels
-$gray: #a89984;
+$gray: rgb(168, 153, 132);
 
 // Links
 $blue: #458588;
@@ -66,23 +66,29 @@ footer {
 }
 
 h1 {
-  color: $yellow;
+  color: $green;
   font-size: 32px;
+  font-weight: 900;
 }
 
 h2 {
+  color: $yellow;
   font-size: 30px;
+  font-weight: 700;
 }
 
 h3 {
+  color: $yellow;
   font-size: 24px;
 }
 
 h4 {
+  color: $yellow;
   font-size: 20px;
 }
 
 h5 {
+  color: $yellow;
   font-size: 18px;
 }
 
